@@ -1,3 +1,15 @@
+2012-03-22  Robert Kroeger  <rjkroege@chromium.org>
+
+        [chromium] Halt in progress flings on receipt of key events
+        https://bugs.webkit.org/show_bug.cgi?id=81988
+
+        Reviewed by Adrienne Walker.
+
+        * src/WebCompositorInputHandlerImpl.cpp:
+        (WebKit::WebCompositorInputHandlerImpl::handleInputEventInternal):
+        * src/WebViewImpl.cpp:
+        (WebKit::WebViewImpl::keyEvent):
+
 2012-03-22  Dana Jansens  <danakj@chromium.org>
 
         [chromium] Skip frames when checkerboarding an animation
